Refactor deploy from URL API so it does not depend on app instance
LMCROSSITXSADEPLOY-3285