@@ -1,19 +1,7 @@
 package org.cloudfoundry.multiapps.controller.web.api.impl;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertThrows;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.when;
-
-import java.io.ByteArrayInputStream;
 import java.io.InputStream;
 import java.math.BigInteger;
-import java.net.http.HttpClient;
-import java.net.http.HttpHeaders;
-import java.net.http.HttpRequest;
-import java.net.http.HttpResponse;
-import java.net.http.HttpResponse.BodyHandlers;
 import java.nio.charset.StandardCharsets;
 import java.time.LocalDateTime;
 import java.util.Base64;
@@ -24,39 +12,33 @@ import java.util.Random;
 import java.util.UUID;
 import java.util.concurrent.Callable;
 import java.util.concurrent.ExecutorService;
-import java.util.concurrent.Future;
 import java.util.concurrent.FutureTask;
-
 import org.apache.commons.lang3.RandomStringUtils;
 import org.cloudfoundry.multiapps.common.SLException;
 import org.cloudfoundry.multiapps.controller.api.model.AsyncUploadResult;
 import org.cloudfoundry.multiapps.controller.api.model.FileMetadata;
 import org.cloudfoundry.multiapps.controller.api.model.ImmutableFileUrl;
-import org.cloudfoundry.multiapps.controller.api.model.ImmutableUserCredentials;
-import org.cloudfoundry.multiapps.controller.client.util.ResilientOperationExecutor;
 import org.cloudfoundry.multiapps.controller.core.auditlogging.FilesApiServiceAuditLog;
-import org.cloudfoundry.multiapps.controller.core.helpers.DescriptorParserFacadeFactory;
-import org.cloudfoundry.multiapps.controller.core.util.ApplicationConfiguration;
 import org.cloudfoundry.multiapps.controller.core.util.UserInfo;
 import org.cloudfoundry.multiapps.controller.persistence.Constants;
 import org.cloudfoundry.multiapps.controller.persistence.model.AsyncUploadJobEntry;
+import org.cloudfoundry.multiapps.controller.persistence.model.AsyncUploadJobEntry.State;
 import org.cloudfoundry.multiapps.controller.persistence.model.FileEntry;
+import org.cloudfoundry.multiapps.controller.persistence.model.ImmutableAsyncUploadJobEntry;
 import org.cloudfoundry.multiapps.controller.persistence.model.ImmutableFileEntry;
 import org.cloudfoundry.multiapps.controller.persistence.query.AsyncUploadJobsQuery;
 import org.cloudfoundry.multiapps.controller.persistence.services.AsyncUploadJobService;
 import org.cloudfoundry.multiapps.controller.persistence.services.FileService;
 import org.cloudfoundry.multiapps.controller.persistence.services.FileStorageException;
-import org.junit.jupiter.api.BeforeAll;
+import org.cloudfoundry.multiapps.controller.web.upload.AsyncUploadJobOrchestrator;
+import org.cloudfoundry.multiapps.controller.web.upload.exception.RejectedAsyncUploadJobException;
+import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.params.ParameterizedTest;
-import org.junit.jupiter.params.provider.ValueSource;
-import org.mockito.Answers;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.Mockito;
 import org.mockito.MockitoAnnotations;
-import org.mockito.Spy;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.core.context.SecurityContextHolder;
@@ -64,78 +46,75 @@ import org.springframework.security.oauth2.client.authentication.OAuth2Authentic
 import org.springframework.security.oauth2.core.user.DefaultOAuth2User;
 import org.springframework.web.multipart.MultipartFile;
 import org.springframework.web.multipart.MultipartHttpServletRequest;
-
-import jakarta.persistence.NoResultException;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.Mockito.RETURNS_SELF;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.when;
 
 class FilesApiServiceImplTest {
 
-    private static final String MTA_ID = "anatz";
-    private static final String FILE_URL = Base64.getUrlEncoder()
-                                                 .encodeToString("https://host.domain/test.mtar?query=true".getBytes(StandardCharsets.UTF_8));
     private static final String SPACE_GUID = "896e6be9-8217-4a1c-b938-09b30966157a";
     private static final String NAMESPACE = "custom-namespace";
     private static final String DIGEST_CHARACTER_TABLE = "123456789ABCDEF";
-    private static final String DECODED_URL_WITH_CREDENTIALS_IN_THE_UTL = "https://abc:abv@google.com";
-    private static final String DECODED_URL_WITH_CREDENTIALS_AND_AT_IN_THE_UTL = "https://abc:ab%40v@google.com";
-    private static final String ENCODED_URL_WITH_CREDENTIALS_AND_AT_IN_THE_UTL_AND_IN_PARAM = "https://abc:ab%40v@google.com/%40user";
-    private static final String DECODED_URL_WITH_CREDENTIALS_AND_AT_IN_THE_UTL_AND_IN_PARAM = "https://abc:ab@v@google.com/@user";
+
+    private static final String FILE_URL = Base64.getUrlEncoder()
+                                                 .encodeToString(
+                                                     "https://host.domain/test.mtar?query=true".getBytes(StandardCharsets.UTF_8));
+    private static final String DECODED_URL_WITH_CREDENTIALS_IN_THE_URL = "https://abc:abv@google.com";
+
     @Mock
     private FileService fileService;
     @Mock
     private MultipartHttpServletRequest request;
     @Mock
     private MultipartFile file;
-    @Mock
-    private HttpClient httpClient;
     @InjectMocks
-    private final FilesApiServiceImpl testedClass = new FilesApiServiceImpl() {
-        @Override
-        protected HttpClient buildHttpClient(String url) {
-            return httpClient;
-        }
-
-        @Override
-        protected ResilientOperationExecutor getResilientOperationExecutor() {
-            return new ResilientOperationExecutor().withRetryCount(0)
-                                                   .withWaitTimeBetweenRetriesInMillis(0);
-        }
-    };
+    private final FilesApiServiceImpl testedClass = new FilesApiServiceImpl();
     @Mock
     private FilesApiServiceAuditLog filesApiServiceAuditLog;
-    @Mock
-    private HttpResponse<InputStream> fileUrlResponse;
-    @Mock(name = "deployFromUrlExecutor")
-    private ExecutorService asyncFileUploadExecutor;
     @Mock(name = "fileStorageThreadPool")
     private ExecutorService fileStorageThreadPool;
     @Mock
-    private ApplicationConfiguration configuration;
-    @Spy
-    private DescriptorParserFacadeFactory descriptorParserFactory = new DescriptorParserFacadeFactory(configuration);
+    private AsyncUploadJobOrchestrator asyncUploadJobOrchestrator;
     @Mock
     private AsyncUploadJobService uploadJobService;
-
-    @BeforeAll
-    public static void setUser() {
-        var user = new UserInfo("user1", "user1", null);
-        var token = new DefaultOAuth2User(Collections.emptyList(), Map.of("user_info", user), "user_info");
-        SecurityContextHolder.getContext()
-                             .setAuthentication(new OAuth2AuthenticationToken(token, Collections.emptyList(), "id"));
-    }
 
     @BeforeEach
     public void initialize() throws Exception {
         MockitoAnnotations.openMocks(this)
                           .close();
+        SecurityContextHolder.clearContext();
+        var user = new UserInfo("user1", "user1", null);
+        var token = new DefaultOAuth2User(Collections.emptyList(), Map.of("user_info", user), "user_info");
+        SecurityContextHolder.getContext()
+                             .setAuthentication(new OAuth2AuthenticationToken(token, Collections.emptyList(), "id"));
         Mockito.when(request.getRequestURI())
                .thenReturn("");
         prepareFileStorageThreadPool();
     }
 
+    @AfterEach
+    public void cleanup() {
+        SecurityContextHolder.clearContext();
+    }
+
+    private void prepareFileStorageThreadPool() {
+        when(fileStorageThreadPool.submit(any(Callable.class))).thenAnswer(invocation -> {
+            Callable<?> callable = invocation.getArgument(0);
+            FutureTask<?> futureTask = new FutureTask<>(callable);
+            futureTask.run();
+            return futureTask;
+        });
+    }
+
     @Test
     void testGetMtaFiles() throws Exception {
         FileEntry entryOne = createFileEntry("test.mtar");
-        FileEntry entryTwo = createFileEntry("extension.mtaet");
+        FileEntry entryTwo = createFileEntry("extension.mtaext");
         Mockito.when(fileService.listFiles(Mockito.eq(SPACE_GUID), Mockito.eq(NAMESPACE)))
                .thenReturn(List.of(entryOne, entryTwo));
         ResponseEntity<List<FileMetadata>> response = testedClass.getFiles(SPACE_GUID, NAMESPACE);
@@ -144,7 +123,28 @@ class FilesApiServiceImplTest {
         assertEquals(2, files.size());
         assertMetadataMatches(entryOne, files.get(0));
         assertMetadataMatches(entryTwo, files.get(1));
+    }
 
+    private FileEntry createFileEntry(String name) {
+        return ImmutableFileEntry.builder()
+                                 .id(UUID.randomUUID()
+                                         .toString())
+                                 .digest(RandomStringUtils.random(32, DIGEST_CHARACTER_TABLE))
+                                 .digestAlgorithm(Constants.DIGEST_ALGORITHM)
+                                 .name(name)
+                                 .namespace(NAMESPACE)
+                                 .size(BigInteger.valueOf(new Random().nextInt(1024 * 1024 * 10)))
+                                 .space(SPACE_GUID)
+                                 .build();
+    }
+
+    private void assertMetadataMatches(FileEntry expected, FileMetadata actual) {
+        assertEquals(expected.getId(), actual.getId());
+        assertEquals(expected.getName(), actual.getName());
+        assertEquals(expected.getSpace(), actual.getSpace());
+        assertEquals(expected.getSize(), actual.getSize());
+        assertEquals(expected.getDigest(), actual.getDigest());
+        assertEquals(expected.getDigestAlgorithm(), actual.getDigestAlgorithm());
     }
 
     @Test
@@ -175,8 +175,7 @@ class FilesApiServiceImplTest {
                                                                       .namespace(NAMESPACE)
                                                                       .name(fileName)
                                                                       .size(BigInteger.valueOf(fileSize))
-                                                                      .build()),
-                                         Mockito.any(InputStream.class)))
+                                                                      .build()), any(InputStream.class)))
                .thenReturn(fileEntry);
 
         ResponseEntity<FileMetadata> response = testedClass.uploadFile(request, SPACE_GUID, NAMESPACE);
@@ -189,402 +188,315 @@ class FilesApiServiceImplTest {
                                                      .namespace(NAMESPACE)
                                                      .name(fileName)
                                                      .size(BigInteger.valueOf(fileSize))
-                                                     .build()),
-                        Mockito.any(InputStream.class));
+                                                     .build()), any(InputStream.class));
 
         FileMetadata fileMetadata = response.getBody();
         assertMetadataMatches(fileEntry, fileMetadata);
     }
 
     @Test
-    void testUploadFileFromUrl() throws Exception {
-        String fileName = "test.mtar";
-        FileEntry fileEntry = createFileEntry(fileName);
-        HttpHeaders headers = HttpHeaders.of(Map.of("Content-Length", List.of("20")), (a, b) -> true);
-        InputStream mockStream = Mockito.mock(InputStream.class);
-        AsyncUploadJobsQuery query = Mockito.mock(AsyncUploadJobsQuery.class, Answers.RETURNS_SELF);
-        var jobEntry = mockUploadJobEntry(fileEntry.getId(), AsyncUploadJobEntry.State.FINISHED, null);
+    void testStartDeployFromUrl() {
+        AsyncUploadJobsQuery asyncUploadJobsQuery = mock(AsyncUploadJobsQuery.class, RETURNS_SELF);
+        when(uploadJobService.createQuery()).thenReturn(asyncUploadJobsQuery);
+        when(asyncUploadJobsQuery.list()).thenReturn(Collections.emptyList());
 
-        Mockito.when(fileUrlResponse.headers())
-               .thenReturn(headers);
-        Mockito.when(fileUrlResponse.statusCode())
-               .thenReturn(200);
-        Mockito.when(fileUrlResponse.body())
-               .thenReturn(mockStream);
-
-        Mockito.when(httpClient.send(Mockito.any(), Mockito.eq(BodyHandlers.ofInputStream())))
-               .thenReturn(fileUrlResponse);
-        AsyncUploadJobsQuery queryReturningNoJobs = mock(AsyncUploadJobsQuery.class);
-        when(query.withStateAnyOf(AsyncUploadJobEntry.State.INITIAL, AsyncUploadJobEntry.State.RUNNING)).thenReturn(queryReturningNoJobs);
-        when(query.list()).thenReturn(List.of(jobEntry));
-        Mockito.when(uploadJobService.createQuery())
-               .thenReturn(query);
-        Mockito.when(uploadJobService.update(any(), any()))
-               .thenReturn(jobEntry);
-
-        Mockito.when(fileService.addFile(Mockito.eq(ImmutableFileEntry.builder()
-                                                                      .name(SPACE_GUID)
-                                                                      .namespace(NAMESPACE)
-                                                                      .name(fileName)
-                                                                      .size(BigInteger.valueOf(20L))
-                                                                      .build()),
-                                         Mockito.any(InputStream.class)))
-               .thenReturn(fileEntry);
-        Mockito.when(fileService.getFile(Mockito.eq(SPACE_GUID), Mockito.eq(fileEntry.getId())))
-               .thenReturn(fileEntry);
-        Mockito.when(configuration.getMaxUploadSize())
-               .thenReturn(ApplicationConfiguration.DEFAULT_MAX_UPLOAD_SIZE);
-        Future<?> future = Mockito.mock(Future.class);
-        when(future.isDone()).thenReturn(true);
-        prepareAsyncExecutor(future);
-
-        ResponseEntity<Void> startUploadResponse = testedClass.startUploadFromUrl(SPACE_GUID, NAMESPACE,
-                                                                                  ImmutableFileUrl.of(FILE_URL, null));
-
-        assertEquals(startUploadResponse.getStatusCode(), HttpStatus.ACCEPTED);
-
-        String jobUrl = startUploadResponse.getHeaders()
-                                           .getFirst("Location");
-        String jobGuid = jobUrl.substring(jobUrl.lastIndexOf('/'));
-
-        ResponseEntity<AsyncUploadResult> uploadJobResponse = testedClass.getUploadFromUrlJob(SPACE_GUID, NAMESPACE, jobGuid);
-
-        assertEquals(uploadJobResponse.getStatusCode(), HttpStatus.CREATED);
-
-        Mockito.verify(fileService)
-               .addFile(Mockito.eq(ImmutableFileEntry.builder()
-                                                     .name(fileName)
-                                                     .namespace(NAMESPACE)
-                                                     .space(SPACE_GUID)
-                                                     .size(BigInteger.valueOf(20L))
-                                                     .build()),
-                        Mockito.any(InputStream.class));
-
-        var responseBody = uploadJobResponse.getBody();
-        var fileMetadata = responseBody.getFile();
-        assertMetadataMatches(fileEntry, fileMetadata);
-
-        var mtaId = responseBody.getMtaId();
-        var status = responseBody.getStatus();
-        assertEquals(mtaId, MTA_ID);
-        assertEquals(status, AsyncUploadResult.JobStatus.FINISHED);
-    }
-
-    private void prepareFileStorageThreadPool() {
-        when(fileStorageThreadPool.submit(any(Callable.class))).thenAnswer(invocation -> {
-            Callable<?> callable = invocation.getArgument(0);
-            FutureTask<?> futureTask = new FutureTask<>(callable);
-            futureTask.run();
-            return futureTask;
-        });
-    }
-
-    private void prepareAsyncExecutor(Future<?> future) {
-        Mockito.doAnswer(invocationOnMock -> {
-            Runnable r = invocationOnMock.getArgument(0);
-            r.run();
-            return future;
-        })
-               .when(asyncFileUploadExecutor)
-               .submit((Runnable) Mockito.any());
+        String expectedJobId = UUID.randomUUID()
+                                   .toString();
+        when(asyncUploadJobOrchestrator.executeUploadFromUrl(any(), any(), any(), any(), any())).thenReturn(
+            ImmutableAsyncUploadJobEntry.builder()
+                                        .id(expectedJobId)
+                                        .url(DECODED_URL_WITH_CREDENTIALS_IN_THE_URL)
+                                        .startedAt(LocalDateTime.now())
+                                        .state(State.INITIAL)
+                                        .user("user1")
+                                        .spaceGuid(SPACE_GUID)
+                                        .instanceIndex(0)
+                                        .build());
+        ResponseEntity<Void> response = testedClass.startUploadFromUrl(SPACE_GUID, NAMESPACE, ImmutableFileUrl.builder()
+                                                                                                              .fileUrl(FILE_URL)
+                                                                                                              .build());
+        assertEquals(HttpStatus.ACCEPTED, response.getStatusCode());
+        assertEquals("spaces/" + SPACE_GUID + "/files/jobs/" + expectedJobId, response.getHeaders()
+                                                                                      .getLocation()
+                                                                                      .toString());
+        Mockito.verify(asyncUploadJobOrchestrator)
+               .executeUploadFromUrl(eq(SPACE_GUID), eq(NAMESPACE), any(String.class), any(String.class), eq(null));
     }
 
     @Test
-    void testUploadFileFromUrlWithInvalidJobId() {
-        AsyncUploadJobsQuery query = Mockito.mock(AsyncUploadJobsQuery.class, Answers.RETURNS_SELF);
-        Mockito.doThrow(NoResultException.class)
-               .when(query)
-               .singleResult();
+    void testStartDeployFromUrlWhenExecutorRejectsJob() {
+        AsyncUploadJobsQuery asyncUploadJobsQuery = mock(AsyncUploadJobsQuery.class, RETURNS_SELF);
+        when(uploadJobService.createQuery()).thenReturn(asyncUploadJobsQuery);
+        when(asyncUploadJobsQuery.list()).thenReturn(Collections.emptyList());
 
-        Mockito.when(uploadJobService.createQuery())
-               .thenReturn(query);
+        AsyncUploadJobEntry rejectedEntry = mock(AsyncUploadJobEntry.class);
+        when(rejectedEntry.getId()).thenReturn("rejected-job-id");
 
-        ResponseEntity<AsyncUploadResult> response = testedClass.getUploadFromUrlJob(SPACE_GUID, NAMESPACE, "invalid");
+        when(asyncUploadJobOrchestrator.executeUploadFromUrl(any(), any(), any(), any(), any())).thenThrow(
+            new RejectedAsyncUploadJobException(rejectedEntry));
 
-        assertEquals(response.getStatusCode(), HttpStatus.NOT_FOUND);
+        ResponseEntity<Void> response = testedClass.startUploadFromUrl(SPACE_GUID, NAMESPACE, ImmutableFileUrl.builder()
+                                                                                                              .fileUrl(FILE_URL)
+                                                                                                              .build());
+
+        assertEquals(HttpStatus.TOO_MANY_REQUESTS, response.getStatusCode());
+        assertEquals("30", response.getHeaders()
+                                   .getFirst("Retry-After"));
+
+        Mockito.verify(asyncUploadJobOrchestrator)
+               .executeUploadFromUrl(eq(SPACE_GUID), eq(NAMESPACE), any(String.class), any(String.class), eq(null));
+
+        Mockito.verify(asyncUploadJobsQuery)
+               .delete();
     }
 
     @Test
-    void testFileUrlDoesntReturnContentLength() throws Exception {
-        HttpHeaders headers = HttpHeaders.of(Collections.emptyMap(), (a, b) -> true);
-        AsyncUploadJobsQuery query = Mockito.mock(AsyncUploadJobsQuery.class, Answers.RETURNS_SELF);
-        String error = "no content length";
-        var jobEntry = mockUploadJobEntry(null, AsyncUploadJobEntry.State.ERROR, error);
+    void testStartDeployFromUrlWhenStuckJobExists() {
+        AsyncUploadJobsQuery asyncUploadJobsQuery = mock(AsyncUploadJobsQuery.class, RETURNS_SELF);
+        when(uploadJobService.createQuery()).thenReturn(asyncUploadJobsQuery);
 
-        Mockito.when(fileUrlResponse.headers())
-               .thenReturn(headers);
-        Mockito.when(fileUrlResponse.statusCode())
-               .thenReturn(200);
+        String existingJobId = UUID.randomUUID()
+                                   .toString();
+        AsyncUploadJobEntry stuckJob = ImmutableAsyncUploadJobEntry.builder()
+                                                                   .id(existingJobId)
+                                                                   .url(DECODED_URL_WITH_CREDENTIALS_IN_THE_URL)
+                                                                   .startedAt(LocalDateTime.now()
+                                                                                           .minusMinutes(5))
+                                                                   .updatedAt(LocalDateTime.now()
+                                                                                           .minusMinutes(2))
+                                                                   .state(State.RUNNING)
+                                                                   .user("user1")
+                                                                   .spaceGuid(SPACE_GUID)
+                                                                   .instanceIndex(0)
+                                                                   .build();
 
-        Mockito.when(httpClient.send(Mockito.any(), Mockito.eq(BodyHandlers.ofInputStream())))
-               .thenReturn(fileUrlResponse);
+        when(asyncUploadJobsQuery.list()).thenReturn(List.of(stuckJob))
+                                         .thenReturn(Collections.emptyList());
 
-        AsyncUploadJobsQuery queryReturningNoJobs = mock(AsyncUploadJobsQuery.class);
-        when(query.withStateAnyOf(AsyncUploadJobEntry.State.INITIAL, AsyncUploadJobEntry.State.RUNNING)).thenReturn(queryReturningNoJobs);
-        when(query.list()).thenReturn(List.of(jobEntry));
-        Mockito.when(uploadJobService.createQuery())
-               .thenReturn(query);
-        Mockito.when(uploadJobService.update(any(), any()))
-               .thenReturn(jobEntry);
-        Future<?> future = Mockito.mock(Future.class);
-        when(future.isDone()).thenReturn(true);
-        prepareAsyncExecutor(future);
+        String newJobId = UUID.randomUUID()
+                              .toString();
+        when(asyncUploadJobOrchestrator.executeUploadFromUrl(any(), any(), any(), any(), any())).thenReturn(
+            ImmutableAsyncUploadJobEntry.builder()
+                                        .id(newJobId)
+                                        .url(DECODED_URL_WITH_CREDENTIALS_IN_THE_URL)
+                                        .startedAt(LocalDateTime.now())
+                                        .state(State.INITIAL)
+                                        .user("user1")
+                                        .spaceGuid(SPACE_GUID)
+                                        .instanceIndex(0)
+                                        .build());
 
-        ResponseEntity<Void> startUploadResponse = testedClass.startUploadFromUrl(SPACE_GUID, NAMESPACE,
-                                                                                  ImmutableFileUrl.of(FILE_URL, null));
+        ResponseEntity<Void> response = testedClass.startUploadFromUrl(SPACE_GUID, NAMESPACE, ImmutableFileUrl.builder()
+                                                                                                              .fileUrl(FILE_URL)
+                                                                                                              .build());
 
-        assertEquals(startUploadResponse.getStatusCode(), HttpStatus.ACCEPTED);
+        assertEquals(HttpStatus.ACCEPTED, response.getStatusCode());
+        assertEquals("spaces/" + SPACE_GUID + "/files/jobs/" + newJobId, response.getHeaders()
+                                                                                 .getLocation()
+                                                                                 .toString());
 
-        String jobUrl = startUploadResponse.getHeaders()
-                                           .getFirst("Location");
-        String jobGuid = jobUrl.substring(jobUrl.lastIndexOf('/'));
-
-        ResponseEntity<AsyncUploadResult> uploadJobResponse = testedClass.getUploadFromUrlJob(SPACE_GUID, NAMESPACE, jobGuid);
-
-        assertEquals(uploadJobResponse.getStatusCode(), HttpStatus.OK);
-
-        var responseBody = uploadJobResponse.getBody();
-        assertEquals(responseBody.getStatus(), AsyncUploadResult.JobStatus.ERROR);
-        assertEquals(responseBody.getError(), error);
+        Mockito.verify(asyncUploadJobsQuery)
+               .id(existingJobId);
+        Mockito.verify(asyncUploadJobsQuery)
+               .delete();
+        Mockito.verify(asyncUploadJobOrchestrator)
+               .executeUploadFromUrl(eq(SPACE_GUID), eq(NAMESPACE), any(String.class), any(String.class), eq(null));
     }
 
     @Test
-    void testUploadFromUrlWhenThereIsValidExistingJob() {
-        AsyncUploadJobsQuery query = Mockito.mock(AsyncUploadJobsQuery.class, Answers.RETURNS_SELF);
-        when(uploadJobService.createQuery()).thenReturn(query);
-        var jobEntry = mockUploadJobEntry(null, AsyncUploadJobEntry.State.ERROR, null);
-        when(query.list()).thenReturn(List.of(jobEntry));
-        Future<?> runningTask = mock(Future.class);
-        prepareAsyncExecutor(runningTask);
-        when(uploadJobService.update(any(), any())).thenReturn(jobEntry);
-        ResponseEntity<Void> firstUpload = testedClass.startUploadFromUrl(SPACE_GUID, NAMESPACE, ImmutableFileUrl.of(FILE_URL, null));
-        String locationHeader = firstUpload.getHeaders()
-                                           .getFirst(org.springframework.http.HttpHeaders.LOCATION);
-        String createdJobId = locationHeader.substring(locationHeader.lastIndexOf("/") + 1);
-        when(jobEntry.getId()).thenReturn(createdJobId);
-        ResponseEntity<Void> secondUpload = testedClass.startUploadFromUrl(SPACE_GUID, NAMESPACE, ImmutableFileUrl.of(FILE_URL, null));
-        assertEquals(HttpStatus.SEE_OTHER, secondUpload.getStatusCode());
+    void testStartDeployFromUrlWhenActiveJobExists() {
+        AsyncUploadJobsQuery asyncUploadJobsQuery = mock(AsyncUploadJobsQuery.class, RETURNS_SELF);
+        when(uploadJobService.createQuery()).thenReturn(asyncUploadJobsQuery);
+
+        String existingJobId = UUID.randomUUID()
+                                   .toString();
+        AsyncUploadJobEntry activeJob = ImmutableAsyncUploadJobEntry.builder()
+                                                                    .id(existingJobId)
+                                                                    .url(DECODED_URL_WITH_CREDENTIALS_IN_THE_URL)
+                                                                    .startedAt(LocalDateTime.now()
+                                                                                            .minusMinutes(1))
+                                                                    .updatedAt(LocalDateTime.now()
+                                                                                            .minusSeconds(10))
+                                                                    .state(State.RUNNING)
+                                                                    .user("user1")
+                                                                    .spaceGuid(SPACE_GUID)
+                                                                    .instanceIndex(0)
+                                                                    .build();
+
+        when(asyncUploadJobsQuery.list()).thenReturn(List.of(activeJob));
+
+        ResponseEntity<Void> response = testedClass.startUploadFromUrl(SPACE_GUID, NAMESPACE, ImmutableFileUrl.builder()
+                                                                                                              .fileUrl(FILE_URL)
+                                                                                                              .build());
+
+        assertEquals(HttpStatus.SEE_OTHER, response.getStatusCode());
+        assertEquals("spaces/" + SPACE_GUID + "/files/jobs/" + existingJobId, response.getHeaders()
+                                                                                      .getLocation()
+                                                                                      .toString());
+
+        Mockito.verify(asyncUploadJobsQuery, Mockito.never())
+               .id(any());
+        Mockito.verify(asyncUploadJobsQuery, Mockito.never())
+               .delete();
+        Mockito.verify(asyncUploadJobOrchestrator, Mockito.never())
+               .executeUploadFromUrl(any(), any(), any(), any(), any());
     }
 
     @Test
-    void testFileUrlReturnsContentLengthAboveMaxUploadSize() throws Exception {
-        long invalidFileSize = ApplicationConfiguration.DEFAULT_MAX_UPLOAD_SIZE + 1024;
-        String fileSize = Long.toString(invalidFileSize);
-        AsyncUploadJobsQuery query = Mockito.mock(AsyncUploadJobsQuery.class, Answers.RETURNS_SELF);
-        String error = "content length exceeds max permitted size of 4GB";
-        HttpHeaders headers = HttpHeaders.of(Map.of("Content-Length", List.of(fileSize)), (a, b) -> true);
-        var jobEntry = mockUploadJobEntry(null, AsyncUploadJobEntry.State.ERROR, error);
+    void testGetUploadFromUrlJobWhenJobNotFound() {
+        AsyncUploadJobsQuery asyncUploadJobsQuery = mock(AsyncUploadJobsQuery.class, RETURNS_SELF);
+        when(uploadJobService.createQuery()).thenReturn(asyncUploadJobsQuery);
+        when(asyncUploadJobsQuery.list()).thenReturn(Collections.emptyList());
 
-        Mockito.when(fileUrlResponse.headers())
-               .thenReturn(headers);
-        Mockito.when(fileUrlResponse.statusCode())
-               .thenReturn(200);
+        ResponseEntity<AsyncUploadResult> response = testedClass.getUploadFromUrlJob(SPACE_GUID, NAMESPACE, "non-existent-job-id");
 
-        Mockito.when(httpClient.send(Mockito.any(), Mockito.eq(BodyHandlers.ofInputStream())))
-               .thenReturn(fileUrlResponse);
+        assertEquals(HttpStatus.NOT_FOUND, response.getStatusCode());
 
-        AsyncUploadJobsQuery queryReturningNoJobs = mock(AsyncUploadJobsQuery.class);
-        when(query.withStateAnyOf(AsyncUploadJobEntry.State.INITIAL, AsyncUploadJobEntry.State.RUNNING)).thenReturn(queryReturningNoJobs);
-        when(query.list()).thenReturn(List.of(jobEntry));
-        Mockito.when(uploadJobService.createQuery())
-               .thenReturn(query);
-        Mockito.when(uploadJobService.update(any(), any()))
-               .thenReturn(jobEntry);
-        Future<?> future = Mockito.mock(Future.class);
-        when(future.isDone()).thenReturn(true);
-        prepareAsyncExecutor(future);
-
-        ResponseEntity<Void> startUploadResponse = testedClass.startUploadFromUrl(SPACE_GUID, NAMESPACE,
-                                                                                  ImmutableFileUrl.of(FILE_URL, null));
-
-        assertEquals(startUploadResponse.getStatusCode(), HttpStatus.ACCEPTED);
-
-        String jobUrl = startUploadResponse.getHeaders()
-                                           .getFirst("Location");
-        String jobGuid = jobUrl.substring(jobUrl.lastIndexOf('/'));
-
-        ResponseEntity<AsyncUploadResult> uploadJobResponse = testedClass.getUploadFromUrlJob(SPACE_GUID, NAMESPACE, jobGuid);
-
-        assertEquals(uploadJobResponse.getStatusCode(), HttpStatus.OK);
-
-        var responseBody = uploadJobResponse.getBody();
-        assertEquals(responseBody.getStatus(), AsyncUploadResult.JobStatus.ERROR);
-        assertEquals(responseBody.getError(), error);
-    }
-
-    @ParameterizedTest
-    @ValueSource(strings = { "https://host.domain/path/file?query=true", "http://host.domain/path/file.mtar?query=true" })
-    void testUploadFileWithInvalidUrl(String url) throws Exception {
-        AsyncUploadJobsQuery query = Mockito.mock(AsyncUploadJobsQuery.class, Answers.RETURNS_SELF);
-        HttpHeaders headers = HttpHeaders.of(Map.of("Content-Length", List.of("20")), (a, b) -> true);
-        var jobEntry = mockUploadJobEntry(null, AsyncUploadJobEntry.State.ERROR, "error");
-
-        Mockito.when(fileUrlResponse.statusCode())
-               .thenReturn(200);
-        Mockito.when(fileUrlResponse.headers())
-               .thenReturn(headers);
-
-        Mockito.when(httpClient.send(Mockito.any(), Mockito.eq(BodyHandlers.ofInputStream())))
-               .thenReturn(fileUrlResponse);
-
-        AsyncUploadJobsQuery queryReturningNoJobs = mock(AsyncUploadJobsQuery.class);
-        when(query.withStateAnyOf(AsyncUploadJobEntry.State.INITIAL, AsyncUploadJobEntry.State.RUNNING)).thenReturn(queryReturningNoJobs);
-        when(query.list()).thenReturn(List.of(jobEntry));
-        Mockito.when(uploadJobService.createQuery())
-               .thenReturn(query);
-        Mockito.when(uploadJobService.update(any(), any()))
-               .thenReturn(jobEntry);
-        Future<?> future = Mockito.mock(Future.class);
-        when(future.isDone()).thenReturn(true);
-        prepareAsyncExecutor(future);
-
-        String invalidFileUrl = Base64.getUrlEncoder()
-                                      .encodeToString(url.getBytes(StandardCharsets.UTF_8));
-
-        ResponseEntity<Void> startUploadResponse = testedClass.startUploadFromUrl(SPACE_GUID, NAMESPACE,
-                                                                                  ImmutableFileUrl.of(invalidFileUrl, null));
-
-        assertEquals(startUploadResponse.getStatusCode(), HttpStatus.ACCEPTED);
-
-        String jobUrl = startUploadResponse.getHeaders()
-                                           .getFirst("Location");
-        String jobGuid = jobUrl.substring(jobUrl.lastIndexOf('/'));
-
-        ResponseEntity<AsyncUploadResult> uploadJobResponse = testedClass.getUploadFromUrlJob(SPACE_GUID, NAMESPACE, jobGuid);
-
-        assertEquals(uploadJobResponse.getStatusCode(), HttpStatus.OK);
-
-        var responseBody = uploadJobResponse.getBody();
-        assertEquals(AsyncUploadResult.JobStatus.ERROR, responseBody.getStatus());
+        Mockito.verify(asyncUploadJobsQuery)
+               .id("non-existent-job-id");
+        Mockito.verify(asyncUploadJobsQuery)
+               .spaceGuid(SPACE_GUID);
+        Mockito.verify(asyncUploadJobsQuery)
+               .user("user1");
+        Mockito.verify(asyncUploadJobsQuery)
+               .namespace(NAMESPACE);
     }
 
     @Test
-    void testGetUploadFromUrlOnDifferentInstance() {
-        AsyncUploadJobsQuery query = Mockito.mock(AsyncUploadJobsQuery.class, Answers.RETURNS_SELF);
-        when(query.withStateAnyOf(AsyncUploadJobEntry.State.INITIAL, AsyncUploadJobEntry.State.RUNNING)).thenReturn(query);
-        var jobEntry = mockUploadJobEntry(null, AsyncUploadJobEntry.State.RUNNING, null);
-        when(query.list()).thenReturn(List.of(jobEntry));
-        Mockito.when(uploadJobService.createQuery())
-               .thenReturn(query);
-        when(configuration.getApplicationInstanceIndex()).thenReturn(3);
-        ResponseEntity<AsyncUploadResult> uploadJobResponse = testedClass.getUploadFromUrlJob(SPACE_GUID, NAMESPACE, jobEntry.getId());
-        assertEquals(AsyncUploadResult.JobStatus.ERROR, uploadJobResponse.getBody()
-                                                                         .getStatus());
+    void testGetUploadFromUrlJobWhenJobIsSuccessful() throws FileStorageException {
+        String jobId = UUID.randomUUID()
+                           .toString();
+        String fileId = UUID.randomUUID()
+                            .toString();
+        String mtaId = "test-mta";
+
+        AsyncUploadJobEntry successfulJob = ImmutableAsyncUploadJobEntry.builder()
+                                                                        .id(jobId)
+                                                                        .url(DECODED_URL_WITH_CREDENTIALS_IN_THE_URL)
+                                                                        .startedAt(LocalDateTime.now()
+                                                                                                .minusMinutes(5))
+                                                                        .updatedAt(LocalDateTime.now()
+                                                                                                .minusMinutes(1))
+                                                                        .state(State.FINISHED)
+                                                                        .user("user1")
+                                                                        .spaceGuid(SPACE_GUID)
+                                                                        .instanceIndex(0)
+                                                                        .fileId(fileId)
+                                                                        .mtaId(mtaId)
+                                                                        .build();
+
+        FileEntry fileEntry = createFileEntry("test.mtar");
+
+        AsyncUploadJobsQuery asyncUploadJobsQuery = mock(AsyncUploadJobsQuery.class, RETURNS_SELF);
+        when(uploadJobService.createQuery()).thenReturn(asyncUploadJobsQuery);
+        when(asyncUploadJobsQuery.list()).thenReturn(List.of(successfulJob));
+        when(fileService.getFile(SPACE_GUID, fileId)).thenReturn(fileEntry);
+
+        ResponseEntity<AsyncUploadResult> response = testedClass.getUploadFromUrlJob(SPACE_GUID, NAMESPACE, jobId);
+
+        assertEquals(HttpStatus.CREATED, response.getStatusCode());
+        AsyncUploadResult result = response.getBody();
+        assertEquals(AsyncUploadResult.JobStatus.FINISHED, result.getStatus());
+        assertEquals(mtaId, result.getMtaId());
+        assertEquals(fileEntry.getId(), result.getFile()
+                                              .getId());
+        assertEquals(fileEntry.getName(), result.getFile()
+                                                .getName());
     }
 
     @Test
-    void testCallRemoteEndpointWithRetry_withSuccessfulCall() throws Exception {
-        HttpResponse<Object> response = Mockito.mock(HttpResponse.class);
+    void testGetUploadFromUrlJobWhenJobIsStuck() {
+        String jobId = UUID.randomUUID()
+                           .toString();
 
-        when(httpClient.send(any(HttpRequest.class), any())).thenReturn(response);
-        when(response.statusCode()).thenReturn(HttpStatus.OK.value());
+        AsyncUploadJobEntry stuckJob = ImmutableAsyncUploadJobEntry.builder()
+                                                                   .id(jobId)
+                                                                   .url(DECODED_URL_WITH_CREDENTIALS_IN_THE_URL)
+                                                                   .startedAt(LocalDateTime.now()
+                                                                                           .minusMinutes(5))
+                                                                   .updatedAt(LocalDateTime.now()
+                                                                                           .minusMinutes(2))
+                                                                   .state(State.RUNNING)
+                                                                   .user("user1")
+                                                                   .spaceGuid(SPACE_GUID)
+                                                                   .instanceIndex(0)
+                                                                   .build();
 
-        HttpResponse testResponce = testedClass.callRemoteEndpointWithRetry(httpClient, DECODED_URL_WITH_CREDENTIALS_IN_THE_UTL,
-                                                                            ImmutableUserCredentials.builder()
-                                                                                                    .build());
-        assertEquals(200, testResponce.statusCode());
+        AsyncUploadJobsQuery asyncUploadJobsQuery = mock(AsyncUploadJobsQuery.class, RETURNS_SELF);
+        when(uploadJobService.createQuery()).thenReturn(asyncUploadJobsQuery);
+        when(asyncUploadJobsQuery.list()).thenReturn(List.of(stuckJob));
+
+        ResponseEntity<AsyncUploadResult> response = testedClass.getUploadFromUrlJob(SPACE_GUID, NAMESPACE, jobId);
+
+        assertEquals(HttpStatus.OK, response.getStatusCode());
+        AsyncUploadResult result = response.getBody();
+        assertEquals(AsyncUploadResult.JobStatus.ERROR, result.getStatus());
+        assertEquals(List.of(AsyncUploadResult.ClientAction.RETRY_UPLOAD), result.getClientActions());
+        assertTrue(result.getError()
+                         .contains("30"));
     }
 
     @Test
-    void testCallRemoteEndpointWithRetry_withUnauthorizedResponce() throws Exception {
-        HttpResponse<Object> response = Mockito.mock(HttpResponse.class);
+    void testGetUploadFromUrlJobWhenJobIsRunning() {
+        String jobId = UUID.randomUUID()
+                           .toString();
+        Long bytesRead = 1024L;
 
-        when(httpClient.send(any(HttpRequest.class), any())).thenReturn(response);
-        when(response.statusCode()).thenReturn(HttpStatus.UNAUTHORIZED.value());
-        when(response.body()).thenReturn(new ByteArrayInputStream("test".getBytes()));
+        AsyncUploadJobEntry runningJob = ImmutableAsyncUploadJobEntry.builder()
+                                                                     .id(jobId)
+                                                                     .url(DECODED_URL_WITH_CREDENTIALS_IN_THE_URL)
+                                                                     .startedAt(LocalDateTime.now()
+                                                                                             .minusMinutes(1))
+                                                                     .updatedAt(LocalDateTime.now()
+                                                                                             .minusSeconds(10))
+                                                                     .state(State.RUNNING)
+                                                                     .user("user1")
+                                                                     .spaceGuid(SPACE_GUID)
+                                                                     .instanceIndex(0)
+                                                                     .bytesRead(bytesRead)
+                                                                     .build();
 
-        SLException thrownException = assertThrows(SLException.class,
-                                                   () -> testedClass.callRemoteEndpointWithRetry(httpClient,
-                                                                                                 DECODED_URL_WITH_CREDENTIALS_IN_THE_UTL,
-                                                                                                 ImmutableUserCredentials.builder()
-                                                                                                                         .build()));
+        AsyncUploadJobsQuery asyncUploadJobsQuery = mock(AsyncUploadJobsQuery.class, RETURNS_SELF);
+        when(uploadJobService.createQuery()).thenReturn(asyncUploadJobsQuery);
+        when(asyncUploadJobsQuery.list()).thenReturn(List.of(runningJob));
 
-        assertEquals("Credentials to https://google.com are wrong. Make sure that they are correct.", thrownException.getMessage());
+        ResponseEntity<AsyncUploadResult> response = testedClass.getUploadFromUrlJob(SPACE_GUID, NAMESPACE, jobId);
+
+        assertEquals(HttpStatus.OK, response.getStatusCode());
+        AsyncUploadResult result = response.getBody();
+        assertEquals(AsyncUploadResult.JobStatus.RUNNING, result.getStatus());
+        assertEquals(bytesRead, result.getBytes());
     }
 
     @Test
-    void testCallRemoteEndpointWithRetry_withBadRequest() throws Exception {
-        HttpResponse<Object> response = Mockito.mock(HttpResponse.class);
+    void testGetUploadFromUrlJobWhenJobIsInErrorState() {
+        String jobId = UUID.randomUUID()
+                           .toString();
+        String errorMessage = "Download failed due to network error";
 
-        when(httpClient.send(any(HttpRequest.class), any())).thenReturn(response);
-        when(response.statusCode()).thenReturn(HttpStatus.BAD_REQUEST.value());
-        when(response.body()).thenReturn(new ByteArrayInputStream("test".getBytes()));
+        AsyncUploadJobEntry errorJob = ImmutableAsyncUploadJobEntry.builder()
+                                                                   .id(jobId)
+                                                                   .url(DECODED_URL_WITH_CREDENTIALS_IN_THE_URL)
+                                                                   .startedAt(LocalDateTime.now()
+                                                                                           .minusMinutes(5))
+                                                                   .updatedAt(LocalDateTime.now()
+                                                                                           .minusMinutes(1))
+                                                                   .state(State.ERROR)
+                                                                   .user("user1")
+                                                                   .spaceGuid(SPACE_GUID)
+                                                                   .instanceIndex(0)
+                                                                   .error(errorMessage)
+                                                                   .build();
 
-        SLException thrownException = assertThrows(SLException.class,
-                                                   () -> testedClass.callRemoteEndpointWithRetry(httpClient,
-                                                                                                 DECODED_URL_WITH_CREDENTIALS_AND_AT_IN_THE_UTL,
-                                                                                                 ImmutableUserCredentials.builder()
-                                                                                                                         .build()));
+        AsyncUploadJobsQuery asyncUploadJobsQuery = mock(AsyncUploadJobsQuery.class, RETURNS_SELF);
+        when(uploadJobService.createQuery()).thenReturn(asyncUploadJobsQuery);
+        when(asyncUploadJobsQuery.list()).thenReturn(List.of(errorJob));
 
-        assertEquals("Error from remote MTAR endpoint ...google.com with status code 400, message: test", thrownException.getMessage());
-    }
+        ResponseEntity<AsyncUploadResult> response = testedClass.getUploadFromUrlJob(SPACE_GUID, NAMESPACE, jobId);
 
-    @Test
-    void testCallRemoteEndpointWithRetry_withBadRequestAndAtInParam() throws Exception {
-        HttpResponse<Object> response = Mockito.mock(HttpResponse.class);
-
-        when(httpClient.send(any(HttpRequest.class), any())).thenReturn(response);
-        when(response.statusCode()).thenReturn(HttpStatus.BAD_REQUEST.value());
-        when(response.body()).thenReturn(new ByteArrayInputStream("test".getBytes()));
-
-        SLException thrownException = assertThrows(SLException.class,
-                                                   () -> testedClass.callRemoteEndpointWithRetry(httpClient,
-                                                                                                 ENCODED_URL_WITH_CREDENTIALS_AND_AT_IN_THE_UTL_AND_IN_PARAM,
-                                                                                                 ImmutableUserCredentials.builder()
-                                                                                                                         .build()));
-
-        assertEquals("Error from remote MTAR endpoint ...user with status code 400, message: test", thrownException.getMessage());
-    }
-
-    @Test
-    void testCallRemoteEndpointWithRetry_withDecodedUrl() throws Exception {
-        HttpResponse<Object> response = Mockito.mock(HttpResponse.class);
-
-        when(httpClient.send(any(HttpRequest.class), any())).thenReturn(response);
-        when(response.statusCode()).thenReturn(HttpStatus.BAD_REQUEST.value());
-        when(response.body()).thenReturn(new ByteArrayInputStream("test".getBytes()));
-
-        assertThrows(IllegalArgumentException.class,
-                     () -> testedClass.callRemoteEndpointWithRetry(httpClient, DECODED_URL_WITH_CREDENTIALS_AND_AT_IN_THE_UTL_AND_IN_PARAM,
-                                                                   null));
-    }
-
-    private void assertMetadataMatches(FileEntry expected, FileMetadata actual) {
-        assertEquals(expected.getId(), actual.getId());
-        assertEquals(expected.getName(), actual.getName());
-        assertEquals(expected.getSpace(), actual.getSpace());
-        assertEquals(expected.getSize(), actual.getSize());
-        assertEquals(expected.getDigest(), actual.getDigest());
-        assertEquals(expected.getDigestAlgorithm(), actual.getDigestAlgorithm());
-    }
-
-    private FileEntry createFileEntry(String name) {
-        return ImmutableFileEntry.builder()
-                                 .id(UUID.randomUUID()
-                                         .toString())
-                                 .digest(RandomStringUtils.random(32, DIGEST_CHARACTER_TABLE))
-                                 .digestAlgorithm(Constants.DIGEST_ALGORITHM)
-                                 .name(name)
-                                 .namespace(NAMESPACE)
-                                 .size(BigInteger.valueOf(new Random().nextInt(1024 * 1024 * 10)))
-                                 .space(SPACE_GUID)
-                                 .build();
-    }
-
-    private AsyncUploadJobEntry mockUploadJobEntry(String fileId, AsyncUploadJobEntry.State jobState, String error) {
-        AsyncUploadJobEntry jobEntry = Mockito.mock(AsyncUploadJobEntry.class);
-        when(jobEntry.getId()).thenReturn(MTA_ID);
-        when(jobEntry.getMtaId()).thenReturn(MTA_ID);
-        when(jobEntry.getUser()).thenReturn("user1");
-        when(jobEntry.getSpaceGuid()).thenReturn(SPACE_GUID);
-        when(jobEntry.getStartedAt()).thenReturn(LocalDateTime.MIN);
-        when(jobEntry.getFileId()).thenReturn(fileId);
-        when(jobEntry.getState()).thenReturn(jobState);
-        when(jobEntry.getUrl()).thenReturn("https://artifactory.sap/mta");
-        when(jobEntry.getInstanceIndex()).thenReturn(0);
-        if (jobState == AsyncUploadJobEntry.State.ERROR) {
-            when(jobEntry.getError()).thenReturn(error);
-        }
-        return jobEntry;
+        assertEquals(HttpStatus.OK, response.getStatusCode());
+        AsyncUploadResult result = response.getBody();
+        assertEquals(AsyncUploadResult.JobStatus.ERROR, result.getStatus());
+        assertEquals(errorMessage, result.getError());
     }
 }
